# aura

./: .gitignore  CMakeLists.txt  README.md  buildrun.sh
include/: aura.h
libaura/: CMakeLists.txt
libaura/include/libaura/: aura.h
libaura/src/: main.cpp  utf8.cpp  version.cpp
live/: CMakeLists.txt  auralive
live/include/: AuraException.h  AuraLive.h  Log.h  PluginLoader.h
live/src/: AuraLive.cpp  Log.cpp  PluginLoader.cpp  main.cpp
plugins/: CMakeLists.txt
plugins/aura-core-elements/: CMakeLists.txt
plugins/aura-core-elements/include/: aura-core-elements.h
plugins/aura-core-elements/src/: aura-core-elements.cpp
src/: utf8.cpp  version.cpp
