add_executable(auralive src/main.cpp src/Log.cpp src/AuraLive.cpp src/PluginLoader.cpp)
add_dependencies(auralive aura)
include(FindPkgConfig)
pkg_search_module(SDL2 REQUIRED sdl2)
find_package(OpenGL)
include_directories("${PROJECT_SOURCE_DIR}/live/include")
include_directories("${PROJECT_SOURCE_DIR}/libaura/include")
include_directories(${SDL2_INCLUDE_DIRS})
include_directories(${OPENGL_INCLUDE_DIR})
target_link_libraries(auralive aura ${CMAKE_DL_LIBS} ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES})
